# Dominos_senior_data_scientist

./: .gitignore  README.md  post_interview_notes.md  presentation v1.pptx  presentation.md  presentation.pptx  pyproject.toml
data/: Michael Kingston Cover Letter.docx  Michael Kingston Resume.docx  dominoes_notes.md
documents/: Communita_regression_outputs.md  David_Federer.md  dominoes_notes.md  individuale_regression_outputs.md
src/: auto_ml_communita.ipynb  auto_ml_individuale.ipynb  communita_slr.ipynb  communita_slr_no_outliers.ipynb  communita_slr_normalised.ipynb  copy_cat.ipynb  eda.ipynb  eda_v2.ipynb  individuale_MR_no_outliers.ipynb  individuale_SLR.ipynb  individuale_SLR_no_outliers.ipynb  individuale_SLR_normalised.ipynb  lightgbm_approach.py  linear_model.py  linear_model_optimal_price.py  linear_regression_approach.py  modelling_v1.ipynb  polynomial_regression.py  qr_code.py  scratchy.py  simple linear model.py
