[tool.poetry]
name = "dominos-senior-data-scientist"
version = "0.1.0"
description = ""
authors = ["Michael Kingston <71872141+mkingopng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.2"
numpy = "^2.0.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"
tqdm = "^4.66.4"
lightgbm = "^4.5.0"
statsmodels = "^0.14.2"
sympy = "^1.13.1"
doubleml = "^0.8.1"
numdifftools = "^0.9.41"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
