[tool.poetry]
name = "dominos-senior-data-scientist"
version = "0.1.0"
description = ""
authors = ["Michael Kingston <71872141+mkingopng@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.0.0"
statsmodels = "^0.14.2"
numdifftools = "^0.9.41"
seaborn = "^0.13.2"
sympy = "^1.13.1"
scikit-learn = "^1.5.1"
tqdm = "^4.66.5"
lightgbm = "^4.5.0"
qrcode = "^7.4.2"
h2o = "^3.46.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
